[gd_scene load_steps=16 format=3 uid="uid://cu4rw5lip6qq5"]

[ext_resource type="Script" path="res://Scripts/coffee_shop.gd" id="1_ef1bb"]
[ext_resource type="Texture2D" uid="uid://q0yjifgf4uus" path="res://Assets/testcoffeeshop.png" id="1_qjq8k"]
[ext_resource type="AudioStream" uid="uid://baropeox66fy" path="res://Audio/cash-register-kaching-Modestas123123.mp3" id="3_0wcur"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_wuv8t"]
a = Vector2(0, 1080)
b = Vector2(-1, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_2df2b"]
a = Vector2(-1924, 1081)
b = Vector2(-1, 1080)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gl5lr"]
size = Vector2(71.5, 384)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5u1w7"]
size = Vector2(73, 347)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ampta"]
size = Vector2(1916, 182)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l2irl"]
size = Vector2(66, 898)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2hll"]
size = Vector2(39, 168)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vutxw"]
size = Vector2(659.5, 121.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1goeo"]
size = Vector2(660, 36)

[sub_resource type="CircleShape2D" id="CircleShape2D_0my16"]
radius = 76.0263

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0v1up"]
size = Vector2(49, 70)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_dyo0q"]
a = Vector2(-22.5, -104)
b = Vector2(-22.5, -35)

[node name="CoffeeShop" type="Node2D"]
script = ExtResource("1_ef1bb")

[node name="CoffeeShopSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_qjq8k")
centered = false

[node name="BoundaryBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundaryBody2D"]
position = Vector2(1920, 0)
shape = SubResource("SegmentShape2D_wuv8t")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BoundaryBody2D"]
position = Vector2(1922, 0)
shape = SubResource("SegmentShape2D_2df2b")

[node name="WallBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(1890, 885)
shape = SubResource("RectangleShape2D_gl5lr")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(1891, 352)
shape = SubResource("RectangleShape2D_5u1w7")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(961, 91)
shape = SubResource("RectangleShape2D_ampta")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(40, 631)
shape = SubResource("RectangleShape2D_l2irl")

[node name="LobbyArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LobbyArea2D"]
position = Vector2(1900, 609)
shape = SubResource("RectangleShape2D_e2hll")

[node name="CounterBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CounterBody2D"]
position = Vector2(944.25, 317.25)
shape = SubResource("RectangleShape2D_vutxw")

[node name="CounterArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CounterArea2D"]
position = Vector2(944, 398)
shape = SubResource("RectangleShape2D_1goeo")

[node name="CoffeeVBoxContainer" type="VBoxContainer" parent="."]
visible = false
offset_left = 892.0
offset_top = 263.0
offset_right = 997.0
offset_bottom = 364.0

[node name="SmallCoffee" type="Button" parent="CoffeeVBoxContainer"]
layout_mode = 2
text = "Small Coffee $5"

[node name="Latte" type="Button" parent="CoffeeVBoxContainer"]
layout_mode = 2
text = "Latte $8"

[node name="Espresso" type="Button" parent="CoffeeVBoxContainer"]
layout_mode = 2
text = "Espresso $10"

[node name="TableBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TableBody2D"]
position = Vector2(405, 758)
shape = SubResource("CircleShape2D_0my16")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TableBody2D"]
position = Vector2(1159, 946)
shape = SubResource("CircleShape2D_0my16")

[node name="ChairBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChairBody2D"]
position = Vector2(269.5, 785)
shape = SubResource("RectangleShape2D_0v1up")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ChairBody2D"]
position = Vector2(269.5, 785)
shape = SubResource("SegmentShape2D_dyo0q")

[node name="ChairBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChairBody2D2"]
position = Vector2(543, 790)
shape = SubResource("RectangleShape2D_0v1up")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ChairBody2D2"]
position = Vector2(588, 790)
shape = SubResource("SegmentShape2D_dyo0q")

[node name="ChairBody2D3" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChairBody2D3"]
position = Vector2(1034, 978)
shape = SubResource("RectangleShape2D_0v1up")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ChairBody2D3"]
position = Vector2(1034, 978)
shape = SubResource("SegmentShape2D_dyo0q")

[node name="ChairBody2D4" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChairBody2D4"]
position = Vector2(1293, 981)
shape = SubResource("RectangleShape2D_0v1up")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ChairBody2D4"]
position = Vector2(1338, 982)
shape = SubResource("SegmentShape2D_dyo0q")

[node name="OrderDelay" type="Timer" parent="."]
one_shot = true

[node name="PurchaseAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0wcur")

[connection signal="body_entered" from="LobbyArea2D" to="." method="_on_lobby_area_2d_body_entered"]
[connection signal="body_entered" from="CounterArea2D" to="." method="_on_counter_area_2d_body_entered"]
[connection signal="body_exited" from="CounterArea2D" to="." method="_on_counter_area_2d_body_exited"]
[connection signal="pressed" from="CoffeeVBoxContainer/SmallCoffee" to="." method="_on_small_coffee_pressed"]
[connection signal="pressed" from="CoffeeVBoxContainer/Latte" to="." method="_on_latte_pressed"]
[connection signal="pressed" from="CoffeeVBoxContainer/Espresso" to="." method="_on_espresso_pressed"]
[connection signal="timeout" from="OrderDelay" to="." method="_on_order_delay_timeout"]
